hello world in microservice flask and docker

--- a/model_nn/data_preprocessing.ipynb
+++ b/model_nn/data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,17 +27,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Data loading\n",
-    "data = pd.read_csv('../../data/credit_risk_dataset.csv')"
+    "data = pd.read_csv('../data/credit_risk_dataset.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
        "cb_person_cred_hist_length           29      0.000000      int64"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,63 +371,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/50, Loss: 0.3538, Validation Loss: 0.3172\n",
-      "Epoch 2/50, Loss: 0.2950, Validation Loss: 0.3310\n",
-      "Epoch 3/50, Loss: 0.2840, Validation Loss: 0.3079\n",
-      "Epoch 4/50, Loss: 0.2693, Validation Loss: 0.2878\n",
-      "Epoch 5/50, Loss: 0.2594, Validation Loss: 0.2872\n",
-      "Epoch 6/50, Loss: 0.2547, Validation Loss: 0.2702\n",
-      "Epoch 7/50, Loss: 0.2508, Validation Loss: 0.2551\n",
-      "Epoch 8/50, Loss: 0.2451, Validation Loss: 0.2586\n",
-      "Epoch 9/50, Loss: 0.2417, Validation Loss: 0.2595\n",
-      "Epoch 10/50, Loss: 0.2437, Validation Loss: 0.2519\n",
-      "Epoch 11/50, Loss: 0.2426, Validation Loss: 0.2493\n",
-      "Epoch 12/50, Loss: 0.2376, Validation Loss: 0.2408\n",
-      "Epoch 13/50, Loss: 0.2384, Validation Loss: 0.2504\n",
-      "Epoch 14/50, Loss: 0.2358, Validation Loss: 0.2508\n",
-      "Epoch 15/50, Loss: 0.2346, Validation Loss: 0.2420\n",
-      "Epoch 16/50, Loss: 0.2341, Validation Loss: 0.2408\n",
-      "Epoch 17/50, Loss: 0.2340, Validation Loss: 0.2413\n",
-      "Epoch 18/50, Loss: 0.2310, Validation Loss: 0.2391\n",
-      "Epoch 19/50, Loss: 0.2284, Validation Loss: 0.2395\n",
-      "Epoch 20/50, Loss: 0.2310, Validation Loss: 0.2489\n",
-      "Epoch 21/50, Loss: 0.2266, Validation Loss: 0.2415\n",
-      "Epoch 22/50, Loss: 0.2280, Validation Loss: 0.2483\n",
-      "Epoch 23/50, Loss: 0.2283, Validation Loss: 0.2535\n",
-      "Epoch 24/50, Loss: 0.2278, Validation Loss: 0.2382\n",
-      "Epoch 25/50, Loss: 0.2261, Validation Loss: 0.2401\n",
-      "Epoch 26/50, Loss: 0.2221, Validation Loss: 0.2678\n",
-      "Epoch 27/50, Loss: 0.2242, Validation Loss: 0.2397\n",
-      "Epoch 28/50, Loss: 0.2220, Validation Loss: 0.2404\n",
-      "Epoch 29/50, Loss: 0.2232, Validation Loss: 0.2433\n",
-      "Epoch 30/50, Loss: 0.2209, Validation Loss: 0.2564\n",
-      "Epoch 31/50, Loss: 0.2206, Validation Loss: 0.2432\n",
-      "Epoch 32/50, Loss: 0.2202, Validation Loss: 0.2475\n",
-      "Epoch 33/50, Loss: 0.2195, Validation Loss: 0.2430\n",
-      "Epoch 34/50, Loss: 0.2183, Validation Loss: 0.2596\n",
-      "Epoch 35/50, Loss: 0.2175, Validation Loss: 0.2509\n",
-      "Epoch 36/50, Loss: 0.2201, Validation Loss: 0.2451\n",
-      "Epoch 37/50, Loss: 0.2155, Validation Loss: 0.2426\n",
-      "Epoch 38/50, Loss: 0.2180, Validation Loss: 0.2377\n",
-      "Epoch 39/50, Loss: 0.2164, Validation Loss: 0.2544\n",
-      "Epoch 40/50, Loss: 0.2149, Validation Loss: 0.2621\n",
-      "Epoch 41/50, Loss: 0.2147, Validation Loss: 0.2437\n",
-      "Epoch 42/50, Loss: 0.2126, Validation Loss: 0.2430\n",
-      "Epoch 43/50, Loss: 0.2148, Validation Loss: 0.2428\n",
-      "Epoch 44/50, Loss: 0.2113, Validation Loss: 0.2373\n",
-      "Epoch 45/50, Loss: 0.2121, Validation Loss: 0.2407\n",
-      "Epoch 46/50, Loss: 0.2132, Validation Loss: 0.2470\n",
-      "Epoch 47/50, Loss: 0.2108, Validation Loss: 0.2827\n",
-      "Epoch 48/50, Loss: 0.2114, Validation Loss: 0.2538\n",
-      "Epoch 49/50, Loss: 0.2119, Validation Loss: 0.2545\n",
-      "Epoch 50/50, Loss: 0.2116, Validation Loss: 0.2502\n"
+      "Epoch 1/50, Loss: 0.3560, Validation Loss: 0.3023\n",
+      "Epoch 2/50, Loss: 0.2989, Validation Loss: 0.2819\n",
+      "Epoch 3/50, Loss: 0.2888, Validation Loss: 0.2843\n",
+      "Epoch 4/50, Loss: 0.2698, Validation Loss: 0.2840\n",
+      "Epoch 5/50, Loss: 0.2637, Validation Loss: 0.2464\n",
+      "Epoch 6/50, Loss: 0.2538, Validation Loss: 0.2657\n",
+      "Epoch 7/50, Loss: 0.2542, Validation Loss: 0.2473\n",
+      "Epoch 8/50, Loss: 0.2483, Validation Loss: 0.2815\n",
+      "Epoch 9/50, Loss: 0.2463, Validation Loss: 0.2768\n",
+      "Epoch 10/50, Loss: 0.2440, Validation Loss: 0.2418\n",
+      "Epoch 11/50, Loss: 0.2408, Validation Loss: 0.2486\n",
+      "Epoch 12/50, Loss: 0.2457, Validation Loss: 0.3028\n",
+      "Epoch 13/50, Loss: 0.2401, Validation Loss: 0.2418\n",
+      "Epoch 14/50, Loss: 0.2383, Validation Loss: 0.2461\n",
+      "Epoch 15/50, Loss: 0.2367, Validation Loss: 0.2435\n",
+      "Epoch 16/50, Loss: 0.2350, Validation Loss: 0.2425\n",
+      "Epoch 17/50, Loss: 0.2329, Validation Loss: 0.2451\n",
+      "Epoch 18/50, Loss: 0.2356, Validation Loss: 0.2622\n",
+      "Epoch 19/50, Loss: 0.2326, Validation Loss: 0.2479\n",
+      "Epoch 20/50, Loss: 0.2295, Validation Loss: 0.2656\n",
+      "Epoch 21/50, Loss: 0.2293, Validation Loss: 0.2471\n",
+      "Epoch 22/50, Loss: 0.2264, Validation Loss: 0.2422\n",
+      "Epoch 23/50, Loss: 0.2273, Validation Loss: 0.2379\n",
+      "Epoch 24/50, Loss: 0.2264, Validation Loss: 0.2375\n",
+      "Epoch 25/50, Loss: 0.2264, Validation Loss: 0.2462\n",
+      "Epoch 26/50, Loss: 0.2257, Validation Loss: 0.2374\n",
+      "Epoch 27/50, Loss: 0.2247, Validation Loss: 0.2388\n",
+      "Epoch 28/50, Loss: 0.2240, Validation Loss: 0.2355\n",
+      "Epoch 29/50, Loss: 0.2238, Validation Loss: 0.2398\n",
+      "Epoch 30/50, Loss: 0.2219, Validation Loss: 0.2400\n",
+      "Epoch 31/50, Loss: 0.2199, Validation Loss: 0.2355\n",
+      "Epoch 32/50, Loss: 0.2206, Validation Loss: 0.2517\n",
+      "Epoch 33/50, Loss: 0.2259, Validation Loss: 0.2348\n",
+      "Epoch 34/50, Loss: 0.2191, Validation Loss: 0.2544\n",
+      "Epoch 35/50, Loss: 0.2175, Validation Loss: 0.2682\n",
+      "Epoch 36/50, Loss: 0.2193, Validation Loss: 0.2531\n",
+      "Epoch 37/50, Loss: 0.2170, Validation Loss: 0.2604\n",
+      "Epoch 38/50, Loss: 0.2185, Validation Loss: 0.2588\n",
+      "Epoch 39/50, Loss: 0.2154, Validation Loss: 0.2551\n",
+      "Epoch 40/50, Loss: 0.2178, Validation Loss: 0.2581\n",
+      "Epoch 41/50, Loss: 0.2150, Validation Loss: 0.2548\n",
+      "Epoch 42/50, Loss: 0.2177, Validation Loss: 0.2577\n",
+      "Epoch 43/50, Loss: 0.2139, Validation Loss: 0.2734\n",
+      "Epoch 44/50, Loss: 0.2154, Validation Loss: 0.3107\n",
+      "Epoch 45/50, Loss: 0.2156, Validation Loss: 0.2784\n",
+      "Epoch 46/50, Loss: 0.2129, Validation Loss: 0.2593\n",
+      "Epoch 47/50, Loss: 0.2141, Validation Loss: 0.2753\n",
+      "Epoch 48/50, Loss: 0.2156, Validation Loss: 0.2457\n",
+      "Epoch 49/50, Loss: 0.2087, Validation Loss: 0.2524\n",
+      "Epoch 50/50, Loss: 0.2147, Validation Loss: 0.2508\n"
      ]
     }
    ],
@@ -463,14 +463,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.2704, Test Accuracy: 0.9081\n"
+      "Test Loss: 0.2560, Test Accuracy: 0.9176\n"
      ]
     }
    ],
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
