--- a/model_nn/data_preprocessing.ipynb
+++ b/model_nn/data_preprocessing.ipynb
@@ -2,12 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "\n",
+    "import sklearn\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
@@ -23,6 +25,23 @@
     "import torch.optim as optim\n",
     "\n",
     "import joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.4.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sklearn.__version__)"
    ]
   },
   {
